<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutResults"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:textSize="34sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtConfirmation"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtResults" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="295dp"
        app:srcCompat="@drawable/driver" />

    <TextView
        android:id="@+id/txtThanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtThanks" />

    <Button
        android:id="@+id/btnBackResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBackResults" />

</LinearLayout>