<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutSummary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:textSize="34sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/lytDisplayDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMilesDisplay"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:text="@string/txtMilesDisplay"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtVehiDisplay"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:text="@string/txtVehiDisplay"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtEstimate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEstimate"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imgCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/car" />

    <LinearLayout
        android:id="@+id/lytButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackSummary"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/btnBack" />

        <Button
            android:id="@+id/btnRequestRide"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:text="@string/btnRequestRide" />

    </LinearLayout>

</LinearLayout>